ec2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: CloudFormation Template To Create EC2 Instance

Resources: 
  CustPortalEC2:
    Type: AWS::EC2::Instance
    Properties:   
      ImageId: ami-063dd30adbb186909
      InstanceType: t2.micro
      Monitoring: false
      SecurityGroups:
        - !Ref HttpSecurityGroup
        - !Ref HttpsSecurityGroup
      UserData: !Base64 |
        #!/bin/bash -ex
        yum -y update
        yum install salt-minion
      Tags:
        - Key: Name
          Value: Customer Login Portal
        - Key: Env
          Value: Prod
  BastionHostEC2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-063dd30adbb186909
      Monitoring: false
      SecurityGroups:
        - !Ref SshSecurityGroup
        - !Ref HttpsSecurityGroup
      UserData: !Base64 |
        #!/bin/bash -ex
        yum -y update
        yum install salt-minion
      Tags:
        - Key: Name
          Value: Bastion Host
        - Key: Env
          Value: Prod
  
  HttpSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP to host
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
  HttpsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTPS to host
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
  SshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTPS to host
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 192.169.1.0/24
